EventSendingController::keyDown does not support non-array modifier arguments https://bugs.webkit.org/show_bug.cgi?id=96727

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-09-14
Reviewed by Kenneth Rohde Christiansen.

Tools:

Add support for handling a string as modifier argument to
EventSendingController::keyDown.

* WebKitTestRunner/InjectedBundle/EventSendingController.cpp:
(WTR::parseModifierArray):

LayoutTests:

Unskip passing test fast/forms/legend-access-key.html

* platform/efl-wk2/TestExpectations:
* platform/gtk-wk2/Skipped:

Canonical link: https://commits.webkit.org/114688@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128602 268f45cc-cd09-0410-ab3c-d52691b4dbfc